[gd_scene load_steps=12 format=2]

[ext_resource path="res://Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Car.gd" type="Script" id=4]
[ext_resource path="res://Camera2.gd" type="Script" id=5]
[ext_resource path="res://Girl.tscn" type="PackedScene" id=6]
[ext_resource path="res://Girl.gd" type="Script" id=7]
[ext_resource path="res://MovingObstacle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Destination.tscn" type="PackedScene" id=9]
[ext_resource path="res://YouLostLabel.tscn" type="PackedScene" id=10]
[ext_resource path="res://YouWonLabel.tscn" type="PackedScene" id=11]

[node name="SceneRoot" type="Spatial"]

[node name="Car" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.419989, 0.42638, 1.23424 )
script = ExtResource( 4 )

[node name="Floor" parent="." instance=ExtResource( 1 )]

[node name="Wall" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.008 )

[node name="Wall2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.0452 )

[node name="Wall3" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.62002, 0, 0.127043 )

[node name="Wall4" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 9.84413, 0, 0.127043 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
margin_bottom = 4.0
focus_neighbour_top = NodePath("ViewportContainer")
focus_neighbour_bottom = NodePath("ViewportContainer2")

[node name="ViewportContainer" type="ViewportContainer" parent="GridContainer"]
margin_right = 1024.0
margin_bottom = 300.0

[node name="Viewport" type="Viewport" parent="GridContainer/ViewportContainer"]
size = Vector2( 1024, 300 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_3d = true

[node name="Camera" type="Camera" parent="GridContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.534057, 0.845448, 0, -0.845448, 0.534057, -0.30113, 9.7733, 9.68541 )
current = true

[node name="ViewportContainer2" type="ViewportContainer" parent="GridContainer"]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 604.0

[node name="Viewport2" type="Viewport" parent="GridContainer/ViewportContainer2"]
size = Vector2( 1024, 300 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_3d = true

[node name="Camera2" type="Camera" parent="GridContainer/ViewportContainer2/Viewport2"]
transform = Transform( 1, 0, 0, 0, 0.984592, 0.174868, 0, -0.174868, 0.984592, 0.0626035, 1.21203, 4.15783 )
script = ExtResource( 5 )

[node name="Girl" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.040498, 0, -0.99918, 0, 1, 0, 0.99918, 0, 0.040498, -5.62586, 0, -8.67129 )
script = ExtResource( 7 )

[node name="MovingObstacle" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.48967, 0.471718, -7.53892 )

[node name="MovingObstacle2" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.48967, 0.471718, 2.57129 )

[node name="MovingObstacle3" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4.17641, 0.471718, 5.97204 )

[node name="MovingObstacle4" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4.17641, 0.471718, -3.87275 )

[node name="Destination" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.163088, 8 )

[node name="YouWon" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.115413, 4.60186, 4.5878 )
visible = false

[node name="YouLost" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.225402, 4.59879, 3.54048 )
visible = false
